--- a/artiste6.html
+++ b/artiste6.html
@@ -25,17 +25,47 @@
             <h2>le seul festival où tous les artistes se produiront un jour</h2>
         </section>
     </header>
+
     <main>
-        <nav>
+        <nav class="menuPrincipal">
             <a href="./accueil.html" id="accueil">Accueil</a>
-            <a href="./programmation" id="programmation">Programmation</a>
+            <a href="./Programmation.html" id="programmation">Programmation</a>
             <a href="./ticket.html" id="tickets">Tickets</a>
             <a href="./boutique.html" id="boutique">Boutique</a>
-            <a href="./infos.html" id="infos">Infos</a>
-            <a href="./a-propos.html" id="a-propos">A propos</a>
-            <a href="/partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./info.html" id="infos">Infos</a>
+            <section class="menuDeroulant"><button class="bouton"><a href="./a-propos.html" id="a-propos">A propos</a>
+                </button>
+                <nav class="menuAPropos">
+                    <a href="./revenus.html">Ils sont (re)venus</a>
+                    <a href="./prochainement.html">Prochainement</a>
+                    <a href="#">Photos/Vidéos</a>
+                    <a href="#">Cosplay</a>
+                </nav>
+            </section>
+            <a href="./partenaires.html" id="partenaires">Partenaires</a>
             <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
+        
+        <button class="listeArtistes">Les artistes</button>
+
+        <aside>
+            <a href="./artiste1.html">Le Grand Jojo</a>
+            <a href="./artiste2.html">The Notorious BIG</a>
+            <a href="./artiste3.html">Alain Bashung</a>
+            <a href="./artiste4.html">Bob Marley</a>
+            <a href="./artiste5.html">Freddie Mercury</a>
+            <a href="./artiste6.html">Amy Winehouse</a>
+            <a href="./artiste7.html">Johnny Hallyday</a>
+            <a href="./artiste8.html">Moonbin</a>
+            <a href="./artiste9.html">Mac Miller</a>
+            <a href="./artiste10.html">Mickael Jackson</a>
+            <a href="./artiste11.html">Carlos</a>
+            <a href="./artiste12.html">2Pac</a>
+            <a href="./artiste13.html">Lemmy</a>
+            <a href="./artiste14.html">Tina Turner</a>
+            <a href="./artiste15.html">AVICII</a>
+        </aside>
+
         <h3>Amy Whinhouse</h3>
         <section id="dispo-artiste">
             <section>
@@ -89,7 +119,7 @@
                     2004
                     pour Stronger than me, en 2007 pour Rehab et en 2008 pour Love is a losing game.</p>
                 <p>Back to Black certifié deux fois disque de platine</p>
-                <h4>Amy c'était</h4>
+                <h4>Amy Winehouse c'était</h4>
                 <audio controls src="./audios/amy-winehouse.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
@@ -103,7 +133,6 @@
     </main>
 
     <footer>
-
         <div>
             <span>Réseaux sociaux </span>
             <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
@@ -113,8 +142,10 @@
         </div>
         <div><a href="#">Contact</a></div>
         <div><a href="#">Conditions générales</a></div>
-
     </footer>
+
+    <script src="./artiste.js"></script>
+
 </body>
 
 </html>
