--- a/partenaires.html
+++ b/partenaires.html
@@ -28,14 +28,22 @@
     </header>
 
     <main>
-        <nav>
+        <nav class="menuPrincipal">
             <a href="./accueil.html" id="accueil">Accueil</a>
-            <a href="./programmation" id="programmation">Programmation</a>
+            <a href="./Programmation.html" id="programmation">Programmation</a>
             <a href="./ticket.html" id="tickets">Tickets</a>
             <a href="./boutique.html" id="boutique">Boutique</a>
-            <a href="./infos.html" id="infos">Infos</a>
-            <a href="./a-propos.html" id="a-propos">A propos</a>
-            <a href="/partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./info.html" id="infos">Infos</a>
+            <section class="menuDeroulant"><button class="bouton"><a href="./a-propos.html" id="a-propos">A propos</a>
+                </button>
+                <nav class="menuAPropos">
+                    <a href="./revenus.html">Ils sont (re)venus</a>
+                    <a href="./prochainement.html">Prochainement</a>
+                    <a href="#">Photos/Vidéos</a>
+                    <a href="#">Cosplay</a>
+                </nav>
+            </section>
+            <a href="./partenaires.html" id="partenaires">Partenaires</a>
             <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
 
