--- a/artiste3.html
+++ b/artiste3.html
@@ -18,7 +18,8 @@
 <body>
     <header>
 
-        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png" alt="logo festival de l'au-delà"></a></figure>
+        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png"
+                    alt="logo festival de l'au-delà"></a></figure>
 
         <section>
             <h1>Festival de l'Au-delà</h1>
@@ -26,37 +27,61 @@
         </section>
     </header>
     <main>
-        <nav>
-            <nav>
-                <a href="./accueil.html" id="accueil">Accueil</a>
-                <a href="./programmation" id="programmation">Programmation</a>
-                <a href="./ticket.html" id="tickets">Tickets</a>
-                <a href="./boutique.html" id="boutique">Boutique</a>
-                <a href="./infos.html" id="infos">Infos</a>
-                <a href="./a-propos.html" id="a-propos">A propos</a>
-                <a href="/partenaires.html" id="partenaires">Partenaires</a>
-                <a href="./connexion.html" id="connexion">Connexion</a>
-            </nav>
+        <nav class="menuPrincipal">
+            <a href="./accueil.html" id="accueil">Accueil</a>
+            <a href="./Programmation.html" id="programmation">Programmation</a>
+            <a href="./ticket.html" id="tickets">Tickets</a>
+            <a href="./boutique.html" id="boutique">Boutique</a>
+            <a href="./info.html" id="infos">Infos</a>
+            <section class="menuDeroulant"><button class="bouton"><a href="./a-propos.html" id="a-propos">A propos</a>
+                </button>
+                <nav class="menuAPropos">
+                    <a href="./revenus.html">Ils sont (re)venus</a>
+                    <a href="./prochainement.html">Prochainement</a>
+                    <a href="#">Photos/Vidéos</a>
+                    <a href="#">Cosplay</a>
+                </nav>
+            </section>
+            <a href="./partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
+
+        <button class="listeArtistes">Les artistes</button>
+
+        <aside>
+            <a href="./artiste1.html">Le Grand Jojo</a>
+            <a href="./artiste2.html">The Notorious BIG</a>
+            <a href="./artiste3.html">Alain Bashung</a>
+            <a href="./artiste4.html">Bob Marley</a>
+            <a href="./artiste5.html">Freddie Mercury</a>
+            <a href="./artiste6.html">Amy Winehouse</a>
+            <a href="./artiste7.html">Johnny Hallyday</a>
+            <a href="./artiste8.html">Moonbin</a>
+            <a href="./artiste9.html">Mac Miller</a>
+            <a href="./artiste10.html">Mickael Jackson</a>
+            <a href="./artiste11.html">Carlos</a>
+            <a href="./artiste12.html">2Pac</a>
+            <a href="./artiste13.html">Lemmy</a>
+            <a href="./artiste14.html">Tina Turner</a>
+            <a href="./artiste15.html">AVICII</a>
+        </aside>
+
         <h3>Alain Bashung</h3>
         <section id="dispo-artiste">
             <section>
                 <figure>
                     <img src="./images/artistes/jpeg/alain_bashung.jpg" alt="photo Alain Bashung" id="photo-artiste">
-                    <figcaption><img src="./images/drapeaux/france.jpg" alt="drapeau français" id="drapeau"> 14 septembre
-                        1983 - 23
-                        juillet 2011</figcaption>
+                    <figcaption><img src="./images/drapeaux/france.jpg" alt="drapeau français" id="drapeau"> 1 décembre 1947 - 14 mars 2009</figcaption>
                 </figure>
                 <h4>Ses titres</h4>
                 <ul>
-                    <li>2003: Stronger than me</li>
-                    <li>2004: Take the box</li>
-                    <li>2004: In my bed / You sent me flying</li>
-                    <li>2004: Fuck me pumps / Help yourself</li>
-                    <li>2006: Rehab</li>
-                    <li>2007: You know I'm not good</li>
-                    <li>2007: Back to black</li>
-                    <li>2007: Tears dry on their own</li>
+                    <li>1980: Gaby oh Gaby</li>
+                    <li>1981: Vertiges de l'amour</li>
+                    <li>1991: Osez Joséphine</li>
+                    <li>1991: Madame rêve</li>
+                    <li>1994: Ma petite entreprise</li>
+                    <li>1998: La nuit je mens</li>
+                    <li>2007: Résidents de la République</li>
                 </ul>
                 <h4>Avis du festival</h4>
                 <p></p>
@@ -70,7 +95,9 @@
                 <audio controls src="#"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
-                    <li><a href="https://www.nostalgie.fr/artistes/alain-bashung/albums">https://www.nostalgie.fr/artistes/alain-bashung/albums</a></li>
+                    <li><a
+                            href="https://www.nostalgie.fr/artistes/alain-bashung/albums">https://www.nostalgie.fr/artistes/alain-bashung/albums</a>
+                    </li>
                     <li><a
                             href="https://fr.wikipedia.org/wiki/Alain_Bashung">https://fr.wikipedia.org/wiki/Alain_Bashung</a>
                     </li>
@@ -80,18 +107,22 @@
     </main>
 
     <footer>
-
         <div>
             <span>Réseaux sociaux </span>
-            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
-            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png" alt="logo twitter"></a>
+            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img
+                    src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img
+                    src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
+            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png"
+                    alt="logo twitter"></a>
             <a href="#" target="_blank"><img src="./images/logos/Logo-reseau.png" alt="logo reseau"></a>
         </div>
         <div><a href="#">Contact</a></div>
         <div><a href="#">Conditions générales</a></div>
-
     </footer>
+
+    <script src="./artiste.js"></script>
+
 </body>
 
 </html>
