--- a/artiste4.html
+++ b/artiste4.html
@@ -18,45 +18,71 @@
 <body>
     <header>
 
-        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png" alt="logo festival de l'au-delà"></a></figure>
+        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png"
+                    alt="logo festival de l'au-delà"></a></figure>
 
         <section>
             <h1>Festival de l'Au-delà</h1>
             <h2>le seul festival où tous les artistes se produiront un jour</h2>
         </section>
     </header>
+
     <main>
-        <nav>
-            <nav>
-                <a href="./accueil.html" id="accueil">Accueil</a>
-                <a href="./programmation" id="programmation">Programmation</a>
-                <a href="./ticket.html" id="tickets">Tickets</a>
-                <a href="./boutique.html" id="boutique">Boutique</a>
-                <a href="./infos.html" id="infos">Infos</a>
-                <a href="./a-propos.html" id="a-propos">A propos</a>
-                <a href="/partenaires.html" id="partenaires">Partenaires</a>
-                <a href="./connexion.html" id="connexion">Connexion</a>
-            </nav>
+        <nav class="menuPrincipal">
+            <a href="./accueil.html" id="accueil">Accueil</a>
+            <a href="./Programmation.html" id="programmation">Programmation</a>
+            <a href="./ticket.html" id="tickets">Tickets</a>
+            <a href="./boutique.html" id="boutique">Boutique</a>
+            <a href="./info.html" id="infos">Infos</a>
+            <section class="menuDeroulant"><button class="bouton"><a href="./a-propos.html" id="a-propos">A propos</a>
+                </button>
+                <nav class="menuAPropos">
+                    <a href="./revenus.html">Ils sont (re)venus</a>
+                    <a href="./prochainement.html">Prochainement</a>
+                    <a href="#">Photos/Vidéos</a>
+                    <a href="#">Cosplay</a>
+                </nav>
+            </section>
+            <a href="./partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
+
+        <button class="listeArtistes">Les artistes</button>
+
+        <aside>
+            <a href="./artiste1.html">Le Grand Jojo</a>
+            <a href="./artiste2.html">The Notorious BIG</a>
+            <a href="./artiste3.html">Alain Bashung</a>
+            <a href="./artiste4.html">Bob Marley</a>
+            <a href="./artiste5.html">Freddie Mercury</a>
+            <a href="./artiste6.html">Amy Winehouse</a>
+            <a href="./artiste7.html">Johnny Hallyday</a>
+            <a href="./artiste8.html">Moonbin</a>
+            <a href="./artiste9.html">Mac Miller</a>
+            <a href="./artiste10.html">Mickael Jackson</a>
+            <a href="./artiste11.html">Carlos</a>
+            <a href="./artiste12.html">2Pac</a>
+            <a href="./artiste13.html">Lemmy</a>
+            <a href="./artiste14.html">Tina Turner</a>
+            <a href="./artiste15.html">AVICII</a>
+        </aside>
+
         <h3>Bob Marley</h3>
         <section id="dispo-artiste">
             <section>
                 <figure>
                     <img src="./images/artistes/jpeg/bob_marley.jpg" alt="photo Bob Marley" id="photo-artiste">
-                    <figcaption><img src="./images/drapeaux/jamaique.jpg" alt="drapeau jamaïcain" id="drapeau"> 14 septembre
-                        1983 - 23
-                        juillet 2011</figcaption>
+                    <figcaption><img src="./images/drapeaux/jamaique.jpg" alt="drapeau jamaïcain" id="drapeau"> 6 février 1945 - 11 mai 1981</figcaption>
                 </figure>
                 <h4>Ses titres</h4>
                 <ul>
-                    <li>2003: Stronger than me</li>
-                    <li>2004: Take the box</li>
-                    <li>2004: In my bed / You sent me flying</li>
-                    <li>2004: Fuck me pumps / Help yourself</li>
-                    <li>2006: Rehab</li>
-                    <li>2007: You know I'm not good</li>
-                    <li>2007: Back to black</li>
-                    <li>2007: Tears dry on their own</li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
                 <h4>Avis du festival</h4>
                 <p></p>
@@ -65,33 +91,37 @@
                 <h4>En deux mots</h4>
                 <p></p>
                 <h4>Ses récompenses</h4>
-                <p</p>
-                <h4>Bob Marley c'était</h4>
-                <audio controls src="#"></audio>
-                <h4>Pour en savoir plus</h4>
-                <ul>
-                    <li><a href="https://www.bobmarley.com/">https://www.bobmarley.com/</a></li>
-                    <li><a
-                            href="https://fr.wikipedia.org/wiki/Bob_Marley">https://fr.wikipedia.org/wiki/Bob_Marley</a>
-                    </li>
-                </ul>
+                <p></p>
+                    <h4>Bob Marley c'était</h4>
+                    <audio controls src="#"></audio>
+                    <h4>Pour en savoir plus</h4>
+                    <ul>
+                        <li><a href="https://www.bobmarley.com/">https://www.bobmarley.com/</a></li>
+                        <li><a
+                                href="https://fr.wikipedia.org/wiki/Bob_Marley">https://fr.wikipedia.org/wiki/Bob_Marley</a>
+                        </li>
+                    </ul>
 
             </section>
     </main>
 
     <footer>
-
         <div>
             <span>Réseaux sociaux </span>
-            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
-            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png" alt="logo twitter"></a>
+            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img
+                    src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img
+                    src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
+            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png"
+                    alt="logo twitter"></a>
             <a href="#" target="_blank"><img src="./images/logos/Logo-reseau.png" alt="logo reseau"></a>
         </div>
         <div><a href="#">Contact</a></div>
         <div><a href="#">Conditions générales</a></div>
-
     </footer>
+
+    <script src="./artiste.js"></script>
+
 </body>
 
 </html>
