--- a/general.html
+++ b/general.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="general.css">
-    
+
     <!-- A remplacer par votre page de style -->
     <!-- <link rel="stylesheet" href="artiste.css"> -->
 
@@ -19,7 +19,8 @@
 <body>
     <header>
         <!-- <section class="element-image"> -->
-        <figure><a href="./a-propos.html"><img src="./images/logos/logo-festival.png" alt="logo festival de l'au-delà"></a></figure>
+        <figure><a href="./a-propos.html"><img src="./images/logos/logo-festival.png"
+                    alt="logo festival de l'au-delà"></a></figure>
         <!-- </section> -->
         <section>
             <h1>Festival de l'Au-delà</h1>
@@ -27,14 +28,22 @@
         </section>
     </header>
     <main>
-        <nav>
+        <nav class="menuPrincipal">
             <a href="./accueil.html" id="accueil">Accueil</a>
-            <a href="./programmation" id="programmation">Programmation</a>
-            <a href="./Ticket.html" id="tickets">Tickets</a>
+            <a href="./Programmation.html" id="programmation">Programmation</a>
+            <a href="./ticket.html" id="tickets">Tickets</a>
             <a href="./boutique.html" id="boutique">Boutique</a>
-            <a href="./infos.html" id="infos">Infos</a>
-            <a href="./a-propos.html" id="a-propos">A propos</a>
-            <a href="/partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./info.html" id="infos">Infos</a>
+            <section class="menuDeroulant"><button class="bouton"><a href="./a-propos.html" id="a-propos">A propos</a>
+                </button>
+                <nav class="menuAPropos">
+                    <a href="./revenus.html">Ils sont (re)venus</a>
+                    <a href="./prochainement.html">Prochainement</a>
+                    <a href="#">Photos/Vidéos</a>
+                    <a href="#">Cosplay</a>
+                </nav>
+            </section>
+            <a href="./partenaires.html" id="partenaires">Partenaires</a>
             <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
     </main>
@@ -43,16 +52,19 @@
 
         <div>
             <span>Réseaux sociaux </span>
-            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
-            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png" alt="logo twitter"></a>
+            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img
+                    src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img
+                    src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
+            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png"
+                    alt="logo twitter"></a>
             <a href="#" target="_blank"><img src="./images/logos/Logo-reseau.png" alt="logo reseau"></a>
         </div>
         <div><a href="#">Contact</a></div>
         <div><a href="#">Conditions générales</a></div>
     </footer>
 
-    <script src="general.js" type="text/javascript"></script>
+    <script src="./general.js" type="text/javascript"></script>
 </body>
 
 </html>
