--- a/Programmation.html
+++ b/Programmation.html
@@ -32,14 +32,14 @@
         
         <main>
             <nav>
-                <a href="#">Accueil</a>
-                <!-- <a href="#">Programmation</a> -->
-                <a href="#">Tickets</a>
-                <a href="#">Boutique</a>
-                <a href="#">Infos</a>
-                <a href="#">A propos</a>
-                <a href="#">Partenaires</a>
-                <a href="#">Connexion</a>
+            <a href="./accueil.html" id="accueil">Accueil</a>
+<!--             <a href="./programmation" id="programmation">Programmation</a> -->
+            <a href="./ticket.html" id="tickets">Tickets</a>
+            <a href="./boutique.html" id="boutique">Boutique</a>
+            <a href="./infos.html" id="infos">Infos</a>
+            <a href="./a-propos.html" id="a-propos">A propos</a>
+            <a href="/partenaires.html" id="partenaires">Partenaires</a>
+            <a href="./connexion.html" id="connexion">Connexion</a>
             </nav>
             
             <!-- Div pass 3jr -->
