Intégration des pages info, panier, prog, ticket

--- a/artiste13.html
+++ b/artiste13.html
@@ -66,7 +66,7 @@
             <a href="./artiste15.html">AVICII</a>
         </aside>
 
-        <h3>Lemmy</h3>
+        <h3>Lemmy Kilmister</h3>
         <section id="dispo-artiste">
             <section>
                 <figure>
@@ -84,15 +84,13 @@
                     <li></li>
                     <li></li>
                 </ul>
-                <h4>Avis du festival</h4>
-                <p></p>
             </section>
             <section>
                 <h4>En deux mots</h4>
                 <p></p>
                 <h4>Ses récompenses</h4>
                 <p></p>
-                <h4>Lemmy c'était</h4>
+                <h4>Lemmy Kilmister c'était</h4>
                 <audio controls src="#"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
