--- a/artiste6.html
+++ b/artiste6.html
@@ -18,7 +18,8 @@
 <body>
     <header>
 
-        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png" alt="logo festival de l'au-delà"></a></figure>
+        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png"
+                    alt="logo festival de l'au-delà"></a></figure>
 
         <section>
             <h1>Festival de l'Au-delà</h1>
@@ -45,7 +46,7 @@
             <a href="./partenaires.html" id="partenaires">Partenaires</a>
             <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
-        
+
         <button class="listeArtistes">Les artistes</button>
 
         <aside>
@@ -86,8 +87,6 @@
                     <li>2007: Back to black</li>
                     <li>2007: Tears dry on their own</li>
                 </ul>
-                <h4>Avis du festival</h4>
-                <p>N'ayant plus de soucis d'addiction, enfin un concert jusqu'à la fin</p>
             </section>
             <section>
                 <h4>En deux mots</h4>
@@ -135,9 +134,12 @@
     <footer>
         <div>
             <span>Réseaux sociaux </span>
-            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
-            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png" alt="logo twitter"></a>
+            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img
+                    src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img
+                    src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
+            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png"
+                    alt="logo twitter"></a>
             <a href="#" target="_blank"><img src="./images/logos/Logo-reseau.png" alt="logo reseau"></a>
         </div>
         <div><a href="#">Contact</a></div>
