--- a/partenaires.html
+++ b/partenaires.html
@@ -12,14 +12,14 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="general.css">
-    <link rel="stylesheet" href="partenaires.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="partenaires.css">    
 </head>
 
 <body>
     <header>
         <!-- <section class="element-image"> -->
-            <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png" alt="logo festival de l'au-delà"></a></figure>
+        <figure><a href="./accueil.html"><img src="./images/logos/logo-festival.png"
+                    alt="logo festival de l'au-delà"></a></figure>
         <!-- </section> -->
         <section>
             <h1>Festival de l'Au-delà</h1>
@@ -47,6 +47,7 @@
             <a href="./connexion.html" id="connexion">Connexion</a>
         </nav>
 
+        <h3>Partenaires historiques du festival</h3>
         <div class="partenaires">
             <div><a href="https://www.sacem.fr/" target="_blank"><img src="./images/logos/logo-sacem.png"
                         alt="logo SACEM"></a></div>
@@ -60,26 +61,36 @@
             </div>
         </div>
         <hr>
-        <div class="partenaire-humour">
-            <div>
-            <h3>Partenaire humour du festival</h3>
-            <div><a href="https://aubreykazimir.github.io/blagounette/"><img src="./images/logos/logo-blagounette.png" alt="logo site blagounette"></a></div></div>
+        <h3>Partenaires nurserie du festival</h3>
+        <div class="partenaires-nurserie">
+            <div><a href="https://aubreykazimir.github.io/blagounette/"><img src="./images/logos/logo-blagounette.png"
+                        alt="logo site blagounette"></a></div>
+            <div><a href="#" target="_blank"><img src="./images/logos/logo-dino.png" alt="logo site dinosaures"></a>
+            </div>
+            <div><a href="https://www.1formation-1job.com/nurserie/" target="_blank"><img
+                        src="./images/logos/logo-nurserie.png" alt="logo nurserie"></a></div>
+            <div><a href="https://www.m2iformation.fr/" target="_blank"><img src="./images/logos/logo-m2i.png"
+                        alt="logo M2I"></a></div>
+            <div><a href="https://www.afpa.fr/" target="_blank"><img src="./images/logos/logo-afpa.png"
+                        alt="logo Afpa"></a></div>
         </div>
 
     </main>
     <footer>
         <div>
             <span>Réseaux sociaux </span>
-            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
-            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
-            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png" alt="logo twitter"></a>
+            <a href="https://www.facebook.com/groups/7263790836969977/files/files" target="_blank"><img
+                    src="./images/logos/logo-facebook.png" alt="logo facebook"></a>
+            <a href="https://www.instagram.com/delaudelafestival/" target="_blank"><img
+                    src="./images/logos/logo-instagramme.png" alt="logo instagram"></a>
+            <a href="https://twitter.com/AuDelaFestival" target="_blank"><img src="./images/logos/logo-twitter.png"
+                    alt="logo twitter"></a>
             <a href="#" target="_blank"><img src="./images/logos/Logo-reseau.png" alt="logo reseau"></a>
         </div>
         <div><a href="#">Contact</a></div>
         <div><a href="#">Conditions générales</a></div>
     </footer>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script> -->
 </body>
 
 </html>
