Ajout des audios

--- a/artiste1.html
+++ b/artiste1.html
@@ -113,7 +113,7 @@
                     début de l'année suivante.
                 </p>
                 <h4>Grand Jojo c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Grand Jojo.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://www.legrandjojo.be/#!/" target="_blank">https://www.legrandjojo.be/#!/</a></li>
