--- a/artiste11.html
+++ b/artiste11.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Carlos c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Carlos.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="http://www.musicarlos.com/">http://www.musicarlos.com/</a></li>
