--- a/artiste12.html
+++ b/artiste12.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>2Pac c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/2Pac.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://2paclegacy.fr/">https://2paclegacy.fr/</a></li>
