--- a/artiste15.html
+++ b/artiste15.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>AVICII c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Avicii.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://avicii.com/">https://avicii.com/</a></li>
