--- a/artiste2.html
+++ b/artiste2.html
@@ -103,7 +103,7 @@
                 <p>1995: musicien de l'année aux Bilboard Awards</p>
 
                 <h4>Notorious Big c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/notorious big.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://www.biggiemerch.com//">https://www.biggiemerch.com/</a></li>
