--- a/artiste3.html
+++ b/artiste3.html
@@ -90,7 +90,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Alain Bashung c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Alain Bashung.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a
