--- a/artiste5.html
+++ b/artiste5.html
@@ -93,7 +93,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Freddie Mercury c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Queen.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="http://www.freddiemercury.com/">http://www.freddiemercury.com/</a></li>
