--- a/artiste8.html
+++ b/artiste8.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Moon bin c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/astro.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://kpop-fanon-fandom.fandom.com/wiki/ASTRA_Magazine">https://kpop-fanon-fandom.fandom.com/wiki/ASTRA_Magazine</a></li>
