--- a/artiste9.html
+++ b/artiste9.html
@@ -90,7 +90,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Mac Miller c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Mac Miller.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://www.macmillerswebsite.com/">https://www.macmillerswebsite.com/</a></li>
