--- a/artiste13.html
+++ b/artiste13.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Lemmy Kilmister c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Motörhead.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://imotorhead.com/">https://imotorhead.com/</a></li>
