--- a/artiste14.html
+++ b/artiste14.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Tina Turner c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Tina Turner.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://www.tina-turner.nl/">https://www.tina-turner.nl/</a></li>
