--- a/artiste4.html
+++ b/artiste4.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                     <h4>Bob Marley c'était</h4>
-                    <audio controls src="#"></audio>
+                    <audio controls src="./audios/Bob Marley.mp3"></audio>
                     <h4>Pour en savoir plus</h4>
                     <ul>
                         <li><a href="https://www.bobmarley.com/">https://www.bobmarley.com/</a></li>
