--- a/artiste7.html
+++ b/artiste7.html
@@ -91,7 +91,7 @@
                 <h4>Ses récompenses</h4>
                 <p></p>
                 <h4>Johnny Hallyday c'était</h4>
-                <audio controls src="#"></audio>
+                <audio controls src="./audios/Johnny Hallyday.mp3"></audio>
                 <h4>Pour en savoir plus</h4>
                 <ul>
                     <li><a href="https://www.johnny-legend.fr/">https://www.johnny-legend.fr/</a></li>
