--- a/Programmation.html
+++ b/Programmation.html
@@ -29,7 +29,7 @@
     <main>
         <nav class="menuPrincipal">
             <a href="./accueil.html" id="accueil">Accueil</a>
-            <!-- <a href="./Programmation.html" id="programmation">Programmation</a> -->
+            <a href="./Programmation.html" id="programmation">Programmation</a>
             <a href="./ticket.html" id="tickets">Tickets</a>
             <a href="./boutique.html" id="boutique">Boutique</a>
             <a href="./info.html" id="infos">Infos</a>
