--- a/boutique.html
+++ b/boutique.html
@@ -49,7 +49,7 @@
     <img src="./images/T-shirt.webp" alt="T-shirt">
     <img src="./images/Gobelets.jpg" alt="Gobelets">
     <img src="./images/Bracelets_fluo.jpg" alt="Bracelets fluo">
-    <img src="./images/Bracelet_concert.jpgimage" alt="Bracelet concert">
+    <img src="./images/Bracelet_concert.jpg" alt="Bracelet concert">
 </div>
 
     </main>
